[package]
name = "fan_controller"
version = "0.1.0"
authors = ["Christopher Michael Sutton <christopher.sutton12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"